Working on freelancer directory / migration to restful URLs

--- a/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -4,8 +4,10 @@
                 xmlns:b="http://mogwai.sourceforge.net/layout"
                 xmlns:a4j="http://richfaces.org/a4j"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:t="http://myfaces.apache.org/tomahawk"
                 xmlns:rich="http://richfaces.org/rich" template="/template/powerstaff.xhtml">
+<ui:define name="pagetitle">
+    <h:outputText value="Powerstaff - Freiberufler"/>
+</ui:define>
 <ui:define name="mainmenu">
     <ui:include src="/include/mainmenu.xhtml"/>
 </ui:define>
