--- a/src/main/webapp/include/customer/customerhistory.xhtml
+++ b/src/main/webapp/include/customer/customerhistory.xhtml
@@ -22,7 +22,7 @@
                 <b:cell y="1" x="2">
                     <a4j:status>
                         <f:facet name="start">
-                            <b:image source="images/rotate2.gif" width="20" height="20"/>
+                            <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20" height="20"/>
                         </f:facet>
                     </a4j:status>
                 </b:cell>
@@ -69,7 +69,7 @@
                             </f:facet>
                             <b:commandLink title="Eintrag löschen" immediate="true"
                                            action="#{customerBackingBean.commandDeleteHistoryEntry}">
-                                <b:image source="/images/delete.gif"/>
+                                <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                                 <a4j:support eventsQueue="powerstaff" event="onclick"
                                              reRender="history"/>
                             </b:commandLink>
