--- a/src/main/webapp/include/partner/partnermain.xhtml
+++ b/src/main/webapp/include/partner/partnermain.xhtml
@@ -22,7 +22,7 @@
     <b:cell y="1" x="2">
         <a4j:status>
             <f:facet name="start">
-                <b:image source="images/rotate2.gif" width="20" height="20"/>
+                <img src="${facesContext.externalContext.requestContextPath}/images/rotate2.gif" width="20" height="20"/>
             </f:facet>
         </a4j:status>
     </b:cell>
@@ -35,7 +35,7 @@
                          rows="20,2,20">
             <b:cell x="1" y="1">
                 <b:commandLink title="Erster Datensatz" action="#{partnerBackingBean.commandFirst}">
-                    <b:image source="/images/first.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/first.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  onsubmit="if (!checkForChangedData()) {return false;}"
@@ -44,7 +44,7 @@
             </b:cell>
             <b:cell x="2" y="1">
                 <b:commandLink title="Vorheriger Datensatz" action="#{partnerBackingBean.commandPrior}">
-                    <b:image source="/images/prior.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/prior.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  onsubmit="if (!checkForChangedData()) {return false;}"
@@ -53,7 +53,7 @@
             </b:cell>
             <b:cell x="3" y="1">
                 <b:commandLink title="Nächster Datensatz" action="#{partnerBackingBean.commandNext}">
-                    <b:image source="/images/next.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/next.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  onsubmit="if (!checkForChangedData()) {return false;}"
@@ -62,7 +62,7 @@
             </b:cell>
             <b:cell x="4" y="1">
                 <b:commandLink title="Letzter Datensatz" action="#{partnerBackingBean.commandLast}">
-                    <b:image source="/images/last.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/last.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  onsubmit="if (!checkForChangedData()) {return false;}"
@@ -71,7 +71,7 @@
             </b:cell>
             <b:cell x="6" y="1">
                 <b:commandLink title="Neuer Datensatz" action="#{partnerBackingBean.commandNew}">
-                    <b:image source="/images/new.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/new.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  onsubmit="if (!checkForChangedData()) {return false;}"
@@ -80,7 +80,7 @@
             </b:cell>
             <b:cell x="7" y="1">
                 <b:commandLink title="Speichern" action="#{partnerBackingBean.commandSave}">
-                    <b:image source="/images/update.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/update.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  oncomplete="clearChanged()"/>
@@ -90,12 +90,12 @@
                 <a4j:commandLink title="Löschen" action="#{partnerBackingBean.commandDelete}"
                                  onclick="if (!confirm('Wollen Sie diesen Datensatz wirklick löschen?')) {return false;}"
                                  reRender="#{partnerBackingBean.data.changedComponents}" oncomplete="clearChanged()">
-                    <b:image source="/images/delete.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                 </a4j:commandLink>
             </b:cell>
             <b:cell x="11" y="1">
                 <b:commandLink title="Suchen" action="#{partnerBackingBean.commandSearch}">
-                    <b:image source="/images/search.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/search.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  oncomplete="clearChanged()"/>
@@ -103,7 +103,7 @@
             </b:cell>
             <b:cell x="13" y="1">
                 <b:commandLink title="Neues Projekt erfassen" action="#{partnerBackingBean.commandNewProject}">
-                    <b:image source="/images/newproject.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/newproject.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  oncomplete="clearChanged()"/>
@@ -118,7 +118,7 @@
             </b:cell>
             <b:cell x="16" y="1">
                 <b:commandLink title="Springe zu Datensatz" action="#{partnerBackingBean.commandJumpToRecord}">
-                    <b:image source="/images/search.gif"/>
+                    <img src="${facesContext.externalContext.requestContextPath}/images/search.gif"/>
                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                  reRender="#{partnerBackingBean.data.changedComponents}"
                                  oncomplete="clearChanged()"/>
@@ -129,7 +129,7 @@
                     <b:commandLink rendered="#{!empty partnerBackingBean.data.originalFreelancer}"
                                    title="Zurück zum Freelancer" action="#{partnerBackingBean.commandJumpToFreelancer}"
                                    immediate="true">
-                        <b:image source="/images/back.gif"/>
+                        <img src="${facesContext.externalContext.requestContextPath}/images/back.gif"/>
                         <a4j:support eventsQueue="powerstaff" event="onclick" oncomplete="clearChanged()"/>
                     </b:commandLink>
                 </a4j:outputPanel>
@@ -286,7 +286,7 @@
                             <h:column>
                                 <b:commandLink title="Kontaktinformation löschen"
                                                action="#{partnerBackingBean.commandDeleteContact}">
-                                    <b:image source="/images/delete.gif"/>
+                                    <img src="${facesContext.externalContext.requestContextPath}/images/delete.gif"/>
                                     <a4j:support eventsQueue="powerstaff" event="onclick"
                                                  reRender="kontakttable"
                                                  oncomplete="markChanged()"/>
@@ -310,7 +310,7 @@
                     <b:cell x="6" y="8" valign="middle">
                         <b:commandLink title="Kontaktinformation hinzufügen"
                                        action="#{partnerBackingBean.commandAddContact}">
-                            <b:image source="images/add.gif"/>
+                            <img src="${facesContext.externalContext.requestContextPath}/images/add.gif"/>
                             <a4j:support eventsQueue="powerstaff" event="onclick"
                                          reRender="#{partnerBackingBean.data.changedComponents}"
                                          oncomplete="clearChanged()"/>
