--- a/src/main/webapp/template/global.xhtml
+++ b/src/main/webapp/template/global.xhtml
@@ -11,10 +11,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta http-equiv="cache-control" content="no-cache"/>
 		<meta http-equiv="pragma" content="no-cache"/>
-		<b:link href="style/site.css" rel="stylesheet" type="text/css"/>
-		<b:link href="style/mogwailayout.css" rel="stylesheet" type="text/css"/>
-		<b:script src="resource/mogwailayout.js" type="text/javascript"/>
-		<b:script src="script/powerstaff.js" type="text/javascript"/>
+		<link href="${facesContext.externalContext.requestContextPath}/style/site.css" rel="stylesheet" type="text/css"/>
+		<link href="${facesContext.externalContext.requestContextPath}/style/mogwailayout.css" rel="stylesheet" type="text/css"/>
+		<script src="${facesContext.externalContext.requestContextPath}/resource/mogwailayout.js" type="text/javascript"/>
+		<script src="${facesContext.externalContext.requestContextPath}/script/powerstaff.js" type="text/javascript"/>
 	</head>
 	<body marginwidth="0" marginheight="0" topmargin="0" leftmargin="0"
 		rightmargin="0" bottommargin="0">
